...
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:title="@string/bank_title"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageButton
            android:id="@+id/rateHistory_bank"
            android:contentDescription="@string/add_friend_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:layout_gravity="end"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            app:srcCompat="@drawable/ic_show_chart_black_32dp" />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/quid_bank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/quidRate"
        android:textStyle="bold"
...
        android:textColor="@android:color/holo_orange_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dolr_bank" />


    <TextView
        android:id="@+id/quidRate_bank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:text=""
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintEnd_toStartOf="@+id/quidBtn_bank"
        app:layout_constraintTop_toBottomOf="@id/toolbar_bank" />

    <TextView
        android:id="@+id/shilRate_bank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dolrBtn_bank"
        app:srcCompat="@drawable/red_coin_24" />

    <Switch
        android:id="@+id/toGoldSwitch_bank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="96dp"
        android:checked="true"
        android:text=""
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/penyRate_bank" />

    <Switch
        android:id="@+id/fromGoldSwitch_bank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="12dp"
        android:text=""
        android:textColor="@android:color/holo_orange_dark"
...
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_bank" />

    <TextView
        android:id="@+id/balance_bank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="@string/balance"
        android:textStyle="italic"
...
