<resources>
    <string name="app_name_coinz">Coinz</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="access_token">pk.eyJ1IjoiemhhbnNoZW5sYyIsImEiOiJjam5xbzhrc3EwMXBzM3FwZzV0NGVldHZzIn0.2ctOrMOocoEvual8xPWXNA</string>

    <!-- Layout Strings -->
    <string name="coinz_logo">Coinz logo</string>
    <string name="user_icon">User icon</string>
    <string name="hint_name">Name</string>
    <string name="hint_name_new">New Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_new">New Password</string>
    <string name="hint_password_old">Old Password</string>
    <string name="hint_password_confirm">Confirm New Password</string>
    <string name="hint_year">YYYY</string>
    <string name="hint_month">MM</string>
    <string name="hint_day">DD</string>
    <string name="login">Sign in</string>
    <string name="register">No account yet? Create one!</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Already a member? Login</string>
    <string name="forget_password">Forgot your password?</string>
    <string name="reset_button">Send Reset Email</string>
    <string name="change_name_button">Change Name</string>
    <string name="reset_password_button">Reset Password</string>
    <string name="enter_date">Please enter a date</string>
    <string name="search_button">Search</string>
    <string name="upload_button">Upload Image</string>

    <!-- Titles -->
    <string name="wallet_title">Wallet</string>
    <string name="bank_title">Bank</string>
    <string name="shop_title">Shop</string>
    <string name="todayList_title">Coins Collected Today</string>
    <string name="friendList_title">Friend List</string>
    <string name="addFriend_title">Add a Friend</string>
    <string name="friendRequestList_title">Friend Requests</string>
    <string name="signOut_title">Sign Out</string>
    <string name="currency_exchange">Currency Exchange</string>
    <string name="forget_password_title">Password Retrieval</string>
    <string name="history_rate_title">History Rates</string>
    <string name="daily_mission">Daily Missions</string>
    <string name="complete_mission">Mission Complete?</string>
    <string name="received_coins_title">Received Coins</string>

    <!-- Image Descriptions -->
    <string name="inBank_description">Bank in</string>
    <string name="purchase_description">Purchase</string>
    <string name="send_description">Send to friend</string>
    <string name="add_friend_description">Add a friend</string>
    <string name="remove_friend_description">Remove a friend</string>
    <string name="open_nav_description">Open navigation drawer</string>
    <string name="shop_description">Shop</string>
    <string name="userIcon_description">User icon</string>

    <!-- Examples -->
    <string name="coinID_example">abcd-efgh-ijkl-mnop</string>
    <string name="coinValue_example">1.234567890</string>
    <string name="coinCurrency_example">QUID</string>
    <string name="name_example">Satomi</string>
    <string name="email_example">123@gmail.com</string>

    <!-- Currency -->
    <string name="quid">QUID</string>
    <string name="shil">SHIL</string>
    <string name="dolr">DOLR</string>
    <string name="peny">PENY</string>
    <string name="gold">GOLD</string>
    <string name="quidRate">QUID to GOLD</string>
    <string name="shilRate">SHIL to GOLD</string>
    <string name="dolrRate">DOLR to GOLD</string>
    <string name="penyRate">PENY to GOLD</string>

    <!-- Words -->
    <string name="amount">Amount</string>
    <string name="exchange">Exchange</string>
    <string name="balance">Balance</string>
    <string name="zero">0</string>
    <string name="one">/ 1</string>
    <string name="three">/ 3</string>
    <string name="from">From:</string>

    <!-- Prices -->
    <string name="meat_price">1 SHIL coin</string>
    <string name="bread_price">1 DOLR coin</string>
    <string name="water_price">1 PENY coin</string>
    <string name="pill_price">1 QUID coin</string>

    <!-- Long String -->
    <string name="splitter">_______________________________</string>
    <string name="author">By Adam LI\ns1603732</string>
    <string name="mission">Meat × 1 + Bread × 1 + Water * 1\nOR\nPill × 3</string>

    <!-- Navigation Bar -->
    <string name="navigation_drawer_open">NavBar</string>
    <string name="navigation_drawer_close">NavBar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
